# univoice-vmc

./: Cargo.toml  README.md  dfx.json  init.sh  package-lock.json  package.json
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/search.desc/univoice_vmc_backend/: univoice_vmc_backend-desc-0-.js
doc/src/univoice_vmc_backend/: ledgertype.rs.html  lib.rs.html  types.rs.html
doc/trait.impl/candid/types/: trait.CandidType.js
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/default/: trait.Default.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/serde/de/: trait.Deserialize.js
doc/univoice_vmc_backend/: all.html  fn.get_candid_pointer.html  index.html  sidebar-items.js  struct.StateHeap.html
icrc7/: constructor.did  icrc7.did  icrc7.most  icrc7.wasm  index.js  init_args.txt  service.did  service.did.d.ts  service.did.js
src/univoice-vmc-backend/: Cargo.toml  build.sh  univoice-vmc-backend.did
src/univoice-vmc-backend/src/: ledgertype.rs  lib.rs  service.rs  types.rs
src/univoice-vmc-frontend/: .babelrc  generate-certificates.sh  index.html  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js
src/univoice-vmc-frontend/.certificates/: cert.pem  key.pem
src/univoice-vmc-frontend/src/: App.jsx  App.scss  App.tsx  App_org.jsx  index.scss  main.tsx
src/univoice-vmc-frontend/src/components/: chakra.module.scss  chakra.tsx  footbar.module.scss  footbar.tsx  paging.tsx  tables.tsx  toast.module.scss  toast.tsx  topbar.tsx  (+1 more)
(+32 files in other folders)
