[package]
name = "univoice-vmc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"

ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
icrc-nft-types = { git = "https://github.com/pramitgaha21/icrc-nft-types.git" }
ic-cdk-macros = "0.14.0"
icrc-ledger-types = "0.1.5"
ic-cdk-timers = "0.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_bytes = "0.11.9"
